udoo.conf: inherit image-live.bbclass in distro conf
Will be needed to generate live bootable usb images

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/distro/udoo.conf
+++ b/conf/distro/udoo.conf
@@ -92,5 +92,7 @@ INHERIT += "uninative"
 
 #INHERIT += "reproducible_build"
 
+INHERIT += "image-live"
+
 BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
