--- a/conf/distro/udoo.conf
+++ b/conf/distro/udoo.conf
@@ -9,7 +9,7 @@ MAINTAINER = "Underview <vince@underview.tech>"
 
 TARGET_VENDOR = "-udoo"
 
-LOCALCONF_VERSION = "1"
+LOCALCONF_VERSION = "2"
 
 DISTRO_VERSION[vardepsexclude] = "DATE"
 SDK_VERSION[vardepsexclude] = "DATE"
@@ -31,17 +31,18 @@ VIRTUAL-RUNTIME_initscripts ?= ""
 PREFERRED_PROVIDER_udev ?= "systemd"
 PREFERRED_PROVIDER_udev-utils ?= "systemd"
 PREFERRED_VERSION_linux-yocto ?= "5.10%"
+PREFERRED_VERSION_linux-yocto-rt ?= "5.10%"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDKMACHINE}-${IMAGE_BASENAME}-${TUNE_PKGARCH}-${MACHINE}"
 SDKPATHINSTALL = "/opt/${DISTRO}/${SDK_VERSION}"
 
-POKYQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPL-3.0", "", "packagegroup-core-device-devel",d)}"
-DISTRO_EXTRA_RDEPENDS:append:qemuarm = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS:append:qemuarm64 = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS:append:qemumips = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS:append:qemuppc = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS:append:qemux86 = " ${POKYQEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS:append:qemux86-64 = " ${POKYQEMUDEPS}"
+QEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPL-3.0", "", "packagegroup-core-device-devel",d)}"
+DISTRO_EXTRA_RDEPENDS:append:qemuarm = " ${QEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemuarm64 = " ${QEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemumips = " ${QEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemuppc = " ${QEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemux86 = " ${QEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS:append:qemux86-64 = " ${QEMUDEPS}"
 
 TCLIBCAPPEND = ""
 
@@ -55,29 +56,6 @@ osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
 svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
 
-SANITY_TESTED_DISTROS ?= " \
-            poky-2.7 \n \
-            poky-3.0 \n \
-            poky-3.1 \n \
-            ubuntu-16.04 \n \
-            ubuntu-18.04 \n \
-            ubuntu-19.04 \n \
-            ubuntu-20.04 \n \
-            fedora-30 \n \
-            fedora-31 \n \
-            fedora-32 \n \
-            fedora-33 \n \
-            fedora-34 \n \
-            centos-7 \n \
-            centos-8 \n \
-            debian-8 \n \
-            debian-9 \n \
-            debian-10 \n \
-            debian-11 \n \
-            opensuseleap-15.1 \n \
-            opensuseleap-15.2 \n \
-            "
-
 # QA check settings - a little stricter than the OE-Core defaults
 WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
                     installed-vs-shipped ldflags pn-overrides rpaths staticdev \
@@ -89,10 +67,6 @@ require conf/distro/include/no-static-libs.inc
 require conf/distro/include/yocto-uninative.inc
 require conf/distro/include/security_flags.inc
 INHERIT += "uninative"
-
-#INHERIT += "reproducible_build"
-
-INHERIT += "image-live"
 
 BB_SIGNATURE_HANDLER ?= "OEEquivHash"
 BB_HASHSERVE ??= "auto"
