udoo-bolt.conf: add initial udoo-bolt-usbimage.wks
Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt.conf
+++ b/conf/machine/udoo-bolt.conf
@@ -1,1 +1,13 @@
 require conf/machine/v1000.conf
+
+# We only support IMAGE_FSTYPES "wic" and "iso"
+IMAGE_FSTYPES = "wic wic.bmap iso"
+
+WKS_FILES ?= "udoo-bolt-usbimage.wks"
+
+# Contents of IMAGE_BOOT_FILES are deployed into "$WKS_FILES" wic image
+IMAGE_BOOT_FILES = "\
+  ${EFIIMGDIR}${EFIDIR}/*;EFI/BOOT/ \
+  ${KERNEL_IMAGETYPE} \
+  ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz;initrd \
+"
