udoo-bolt.conf: add wic.gz to IMAGE_FSTYPES
Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt.conf
+++ b/conf/machine/udoo-bolt.conf
@@ -1,7 +1,7 @@
 require conf/machine/v1000.conf
 
 # We only support IMAGE_FSTYPES "wic" and "iso"
-IMAGE_FSTYPES = "wic wic.bmap iso"
+IMAGE_FSTYPES = "wic wic.gz wic.bmap iso"
 
 WKS_FILES ?= "udoo-bolt-usbimage.wks"
 
