--- a/conf/machine/udoo-bolt.conf
+++ b/conf/machine/udoo-bolt.conf
@@ -7,7 +7,11 @@ WKS_FILES ?= "udoo-bolt-usbimage.wks"
 
 # Contents of IMAGE_BOOT_FILES are deployed into "$WKS_FILES" wic image
 IMAGE_BOOT_FILES = "\
-  ${EFIIMGDIR}${EFIDIR}/*;EFI/BOOT/ \
-  ${KERNEL_IMAGETYPE} \
-  ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz;initrd \
+    ${EFIIMGDIR}${EFIDIR}/*;EFI/BOOT/ \
+    ${EFIIMGDIR}/startup.nsh;startup.nsh \
+    ${KERNEL_IMAGETYPE} \
+    ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz;initrd \
 "
+
+# This makes sure that boot files are deployed before do_image_wic starts execution
+do_image_wic[depends] += "${IMAGE_BASENAME}:do_bootimg"
