udoo-bolt-usbimage: remove root partition
Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-usbimage.conf
+++ b/conf/machine/udoo-bolt-usbimage.conf
@@ -2,4 +2,7 @@ require udoo-bolt.inc
 
 WKS_FILES ?= "udoo-bolt-usbimage.wks"
 
-IMAGE_BOOT_FILES:append = " ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz;initrd"
+IMAGE_BOOT_FILES:append = "\
+  ${ROOTFS};rootfs.img \
+  ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz;initrd \
+"
