udoo-bolt-usbimage: support serial console
At the moment OE-core variables in grub-efi-cfg.bbclass
(i.e GRUB_SERIAL, GRUB_TIMEOUT, GRUB_OPTS)
aren't being overridin in the layer. Utilizing
the APPEND variable to update grub.cfg console= with
character device associated with udoo-bolt UART0.

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-usbimage.conf
+++ b/conf/machine/udoo-bolt-usbimage.conf
@@ -6,3 +6,11 @@ IMAGE_BOOT_FILES:append = "\
   ${ROOTFS};rootfs.img \
   ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz;initrd \
 "
+
+LABELS_LIVE ?= "boot"
+ROOT_LIVE ?= "root=/dev/ram0"
+
+# At the moment OE-core variables in grub-efi-cfg.bbclass
+# (i.e GRUB_SERIAL, GRUB_TIMEOUT, GRUB_OPTS)
+# aren't being overridin in the layer
+APPEND = "console=tty1 console=ttyS0,115200n8 rootfstype=ext4"
