meta: allow grub config to be overwritten
OE-core doesn't make it easy to swap out grub.cfg
There's a recipe grub-bootconf that appears to allow
it, but from test seems to get overridin when do_image_complete
is called. This is due to a function called do_bootimg in
the image-live.bbclass. Which executes build_efi_cfg which
makes the actual grub.cfg.

Commit:
	1. removes the 'live iso' IMAGE_FSTYPES as by
	   default adding those will include the image-live.bbclass
	2. Allows grub.cfg to be completely generated from customer
	   input string
	3. Extracts important portions of oe-core so that we can
	   populate the image boot directory

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -29,7 +29,7 @@ DISTRO = "udoo"
 #MACHINE ?= "qemux86-64"
 #
 # This sets the default machine to be qemux86-64 if no other machine is selected:
-MACHINE ??= "udoo-bolt-usbimage"
+MACHINE = "udoo-bolt-usbimage"
 
 #
 # Where to place downloads
@@ -241,7 +241,6 @@ PACKAGECONFIG:append:pn-nativesdk-qemu = " sdl"
 CONF_VERSION = "2"
 
 EXTRA_IMAGE_FEATURES:append = " ssh-server-openssh empty-root-password allow-root-login"
-GRUB_TIMEOUT = "1"
 IMAGE_INSTALL:append = "\
   util-linux-lsblk usbutils parted e2fsprogs-resize2fs \
   pciutils systemd-analyze git vim htop iotop \
