--- a/conf/machine/udoo-bolt-usbimage.conf
+++ b/conf/machine/udoo-bolt-usbimage.conf
@@ -2,15 +2,24 @@ require udoo-bolt.inc
 
 WKS_FILES ?= "udoo-bolt-usbimage.wks"
 
+INITRD_IMAGE_LIVE ?= "${MLPREFIX}core-image-minimal-initramfs"
+INITRD_LIVE ?= "${DEPLOY_DIR_IMAGE}/${INITRD_IMAGE_LIVE}-${MACHINE}.${INITRAMFS_FSTYPES}"
+
 IMAGE_BOOT_FILES:append = "\
   ${ROOTFS};rootfs.img \
   ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz;initrd \
 "
 
-LABELS_LIVE ?= "boot"
-ROOT_LIVE ?= "root=/dev/ram0"
-
-# At the moment OE-core variables in grub-efi-cfg.bbclass
-# (i.e GRUB_SERIAL, GRUB_TIMEOUT, GRUB_OPTS)
-# aren't being overridin in the layer
-APPEND = "console=tty1 console=ttyS0,115200n8 rootfstype=ext4"
+# https://www.gnu.org/software/grub/manual/grub/html_node/index.html#SEC_Contents
+GRUB_CFG ?= "\
+serial --unit=0 --speed=115200 --word=8 --parity=no --stop=1\n\
+set gfxmode=auto\n\
+set gfxpayload=keep\n\
+default=boot\n\n\
+# Boot automatically after 0 secs.\n\
+set timeout=0\n\n\
+menuentry 'boot' {\n\
+  linux /bzImage LABEL=boot root=/dev/ram0 console=tty1 console=ttyS0,115200n8 rootfstype=ext4\n\
+  initrd /initrd\n\
+}\n\
+"
