images: add udoo-minimal-initramfs
Commit fixes bug with last commit where ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz
wasn't found. INITRAMFS_FSTYPES is already set in bitbake.conf
it should be cpio.gz not ext4.

Always for custom initrd's and grub configs to be used early in the boot process

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-usbimage.conf
+++ b/conf/machine/udoo-bolt-usbimage.conf
@@ -1,13 +1,14 @@
 require udoo-bolt.inc
 
+#WKS_SEARCH_PATH ?= ""
 WKS_FILES ?= "udoo-bolt-usbimage.wks"
 
-INITRD_IMAGE_LIVE ?= "${MLPREFIX}core-image-minimal-initramfs"
-INITRD_LIVE ?= "${DEPLOY_DIR_IMAGE}/${INITRD_IMAGE_LIVE}-${MACHINE}.${INITRAMFS_FSTYPES}"
+INITRAMFS_IMAGE ?= "${MLPREFIX}udoo-minimal-initramfs"
+INITRAMFS_IMAGE_BUNDLE ?= "0"
 
 IMAGE_BOOT_FILES:append = "\
   ${ROOTFS};rootfs.img \
-  ${INITRD_IMAGE_LIVE}-${MACHINE}.cpio.gz;initrd \
+  ${INITRAMFS_IMAGE}-${MACHINE}.cpio.gz;initrd \
 "
 
 # https://www.gnu.org/software/grub/manual/grub/html_node/index.html#SEC_Contents
