--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,5 +9,5 @@ BBFILE_COLLECTIONS += "meta-udoo-bolt"
 BBFILE_PATTERN_meta-udoo-bolt = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-udoo-bolt = "5"
 
-LAYERDEPENDS_meta-udoo-bolt = "core openembedded-layer meta-python networking-layer amd-bsp"
+LAYERDEPENDS_meta-udoo-bolt = "core amd-bsp"
 LAYERSERIES_COMPAT_meta-udoo-bolt = "kirkstone"
