udoo-bolt-usbimage: genericize grub config creation
Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-usbimage.conf
+++ b/conf/machine/udoo-bolt-usbimage.conf
@@ -6,6 +6,10 @@ WKS_FILES ?= "udoo-bolt-usbimage.wks"
 INITRAMFS_IMAGE ?= "${MLPREFIX}udoo-minimal-initramfs"
 INITRAMFS_IMAGE_BUNDLE ?= "0"
 
+BOLT_ROOT_DEVICE ?= "/dev/ram0"
+
+SERIAL_CONSOLES ?= "115200;ttyS0"
+
 IMAGE_BOOT_FILES:append = "\
   ${ROOTFS};rootfs.img \
   ${INITRAMFS_IMAGE}-${MACHINE}.cpio.gz;initrd \
@@ -16,11 +20,11 @@ GRUB_CFG ?= "\
 serial --unit=0 --speed=115200 --word=8 --parity=no --stop=1\n\
 set gfxmode=auto\n\
 set gfxpayload=keep\n\
-default=boot\n\n\
+default=0\n\n\
 # Boot automatically after 0 secs.\n\
 set timeout=0\n\n\
-menuentry 'boot' {\n\
-  linux /bzImage LABEL=boot root=/dev/ram0 console=tty1 console=ttyS0,115200n8 rootfstype=ext4\n\
+menuentry 'UDOO Bolt Live USB' {\n\
+  linux /${KERNEL_IMAGETYPE} LABEL=boot root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4\n\
   initrd /initrd\n\
 }\n\
 "
