--- a/conf/machine/udoo-bolt-live-usb.conf
+++ b/conf/machine/udoo-bolt-live-usb.conf
@@ -1,7 +1,7 @@
 require udoo-bolt.inc
 
 #WKS_SEARCH_PATH ?= ""
-WKS_FILES ?= "udoo-bolt-usbimage.wks"
+WKS_FILES ?= "udoo-bolt-live-usb.wks"
 
 INITRAMFS_IMAGE ?= "${MLPREFIX}udoo-minimal-initramfs"
 INITRAMFS_IMAGE_BUNDLE ?= "0"
