machine: move .inc files include folder
Also renames udoo-bolt.inc to udoo-bolt-common.inc

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-live-usb.conf
+++ b/conf/machine/udoo-bolt-live-usb.conf
@@ -1,5 +1,5 @@
-require udoo-bolt-v1000.inc
-require udoo-bolt.inc
+require include/udoo-bolt-v1000.inc
+require include/udoo-bolt-common.inc
 
 #WKS_SEARCH_PATH ?= ""
 WKS_FILES ?= "udoo-bolt-live-usb.wks"
