meta: follow OE standard practices
Commit also adds langdale into LAYERSERIES_COMPAT

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-udoo-bolt = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-udoo-bolt = "5"
 
 LAYERDEPENDS_meta-udoo-bolt = "core amd-bsp"
-LAYERSERIES_COMPAT_meta-udoo-bolt = "kirkstone"
+LAYERSERIES_COMPAT_meta-udoo-bolt = "langdale kirkstone"
