machine: support ACPI Table debugging
Adds three new variables
	1. ACPI_DEBUG - variable to enable/disable
	   the ACPI kernel config symbols & proper
	   kernel command line params.
	2. ACPI_DEBUG_KERNEL_ARGS - String passed
	   to linux kernel to set debug levels.
	3. KERNEL_ARGS - Sets the parameters passed
	   to the kernel.

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-live-usb.conf
+++ b/conf/machine/udoo-bolt-live-usb.conf
@@ -11,6 +11,8 @@ BOLT_ROOT_DEVICE ?= "/dev/ram0"
 
 SERIAL_CONSOLES ?= "115200;ttyS0"
 
+KERNEL_ARGS ?= "root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
+
 IMAGE_BOOT_FILES:append = "\
   ${ROOTFS};rootfs.img \
   ${INITRAMFS_IMAGE}-${MACHINE}.cpio.gz;initrd \
@@ -25,7 +27,7 @@ default=0\n\n\
 # Boot automatically after 0 secs.\n\
 set timeout=0\n\n\
 menuentry 'UDOO Bolt Live USB' {\n\
-  linux /${KERNEL_IMAGETYPE} LABEL=boot root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4\n\
+  linux /${KERNEL_IMAGETYPE} LABEL=root ${KERNEL_ARGS}\n\
   initrd /initrd\n\
 }\n\
 "
