--- a/conf/machine/udoo-bolt-emmc.conf
+++ b/conf/machine/udoo-bolt-emmc.conf
@@ -11,6 +11,8 @@ BOLT_ROOT_DEVICE ?= "/dev/mmcblk0p2"
 
 SERIAL_CONSOLES ?= "115200;ttyS0"
 
+KERNEL_ARGS ?= "root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
+
 # https://www.gnu.org/software/grub/manual/grub/html_node/index.html#SEC_Contents
 GRUB_CFG ?= "\
 serial --unit=0 --speed=115200 --word=8 --parity=no --stop=1\n\
@@ -20,6 +22,6 @@ set default=0\n\n\
 # Boot automatically after 0 secs.\n\
 set timeout=0\n\n\
 menuentry 'UDOO Bolt eMMC' {\n\
-  linux /${KERNEL_IMAGETYPE} LABEL=root root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4\n\
+  linux /${KERNEL_IMAGETYPE} LABEL=root ${KERNEL_ARGS}\n\
 }\n\
 "
