linux-yocto: set ACPI_DEBUG symbol
Enables ACPI table debugging

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/recipes-kernel/linux/linux-yocto-5.19/amdx86-user-config.cfg
+++ b/recipes-kernel/linux/linux-yocto-5.19/amdx86-user-config.cfg
@@ -85,6 +85,7 @@ CONFIG_ACPI_APEI_PCIEAER=y
 CONFIG_ACPI_APEI_MEMORY_FAILURE=y
 CONFIG_ACPI_APEI_EINJ=m
 CONFIG_ACPI_APEI_ERST_DEBUG=m
+CONFIG_ACPI_DEBUG=y
 
 #
 # CPU Frequency scaling
@@ -386,4 +387,3 @@ CONFIG_INTERVAL_TREE=y
 #
 # Console display driver support
 #
-
