--- a/recipes-kernel/linux-5.15/linux-yocto-5.15/amdx86-user-config.cfg
+++ b/recipes-kernel/linux-5.15/linux-yocto-5.15/amdx86-user-config.cfg
@@ -87,6 +87,7 @@ CONFIG_ACPI_APEI_PCIEAER=y
 CONFIG_ACPI_APEI_MEMORY_FAILURE=y
 CONFIG_ACPI_APEI_EINJ=m
 CONFIG_ACPI_APEI_ERST_DEBUG=m
+CONFIG_ACPI_DEBUG=y
 
 #
 # CPU Frequency scaling
@@ -388,4 +389,3 @@ CONFIG_INTERVAL_TREE=y
 #
 # Console display driver support
 #
-
