layer: LAYERSERIES_COMPAT only support mickledore
Layer master doesn't contain and isn't
going to support kernel version 5.19.

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-udoo-bolt = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-udoo-bolt = "5"
 
 LAYERDEPENDS_meta-udoo-bolt = "core"
-LAYERSERIES_COMPAT_meta-udoo-bolt = "mickledore langdale kirkstone"
+LAYERSERIES_COMPAT_meta-udoo-bolt = "mickledore"
