udoo-bolt-live-usb: update IMAGE_BOOT_FILES cpio archive name
Upstream OE-core updated the extension name given to
generated build output to include .rootfs. Accommodating
for change in commit.

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-live-usb.conf
+++ b/conf/machine/udoo-bolt-live-usb.conf
@@ -15,7 +15,7 @@ KERNEL_ARGS ?= "root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 roo
 
 IMAGE_BOOT_FILES:append = "\
     ${ROOTFS};rootfs.img \
-    ${INITRAMFS_IMAGE}-${MACHINE}.cpio.gz;initrd \
+    ${INITRAMFS_IMAGE}-${MACHINE}.rootfs.cpio.gz;initrd \
     "
 
 # https://www.gnu.org/software/grub/manual/grub/html_node/index.html#SEC_Contents
