udoo[distro]: add usrmerge to DISTRO_FEATURES
In later version of OE-core systemd requires it

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/distro/udoo.conf
+++ b/conf/distro/udoo.conf
@@ -16,7 +16,7 @@ LOCALCONF_VERSION = "2"
 DISTRO_VERSION[vardepsexclude] = "DATE"
 SDK_VERSION[vardepsexclude] = "DATE"
 
-UDOO_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland vulkan systemd bluetooth"
+UDOO_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland vulkan systemd bluetooth usrmerge"
 UDOO_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
 UDOO_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
