--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-udoo-bolt = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-udoo-bolt = "5"
 
 LAYERDEPENDS_meta-udoo-bolt = "core"
-LAYERSERIES_COMPAT_meta-udoo-bolt = "nanbield"
+LAYERSERIES_COMPAT_meta-udoo-bolt = "styhead"
