--- a/conf/machine/udoo-bolt-live-usb.conf
+++ b/conf/machine/udoo-bolt-live-usb.conf
@@ -1,33 +1,10 @@
 require include/udoo-bolt-v1000.inc
 require include/udoo-bolt-common.inc
 
-#WKS_SEARCH_PATH ?= ""
-WKS_FILES ?= "udoo-bolt-live-usb.wks"
-
-INITRAMFS_IMAGE ?= "${MLPREFIX}udoo-minimal-initramfs"
-INITRAMFS_IMAGE_BUNDLE ?= "0"
+WKS_FILES ?= "liveusb.wks"
 
 BOLT_ROOT_DEVICE ?= "/dev/ram0"
 
 SERIAL_CONSOLES ?= "115200;ttyS0"
 
 KERNEL_ARGS ?= "root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
-
-IMAGE_BOOT_FILES:append = "\
-    ${ROOTFS};rootfs.img \
-    ${INITRAMFS_IMAGE}-${MACHINE}.rootfs.cpio.gz;initrd \
-    "
-
-# https://www.gnu.org/software/grub/manual/grub/html_node/index.html#SEC_Contents
-GRUB_CFG ?= "\
-serial --unit=0 --speed=115200 --word=8 --parity=no --stop=1\n\
-set gfxmode=auto\n\
-set gfxpayload=keep\n\
-default=0\n\n\
-# Boot automatically after 0 secs.\n\
-set timeout=0\n\n\
-menuentry 'UDOO Bolt Live USB' {\n\
-    linux /${KERNEL_IMAGETYPE} LABEL=root ${KERNEL_ARGS}\n\
-    initrd /initrd\n\
-}\n\
-"
