add grub-efi & grub build output to liveusb
Will be later used to setup grub hybrid boot

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-live-usb.conf
+++ b/conf/machine/udoo-bolt-live-usb.conf
@@ -1,6 +1,8 @@
 require include/udoo-bolt-v1000.inc
 require include/udoo-bolt-common.inc
 
+LIVEUSB_INCLUDE_INSTALLER_SCRIPT ?= "1"
+
 WKS_FILES ?= "liveusb.wks"
 
 BOLT_ROOT_DEVICE ?= "/dev/ram0"
