bootloader-extra: isolinux add menu screen
Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/recipes-core/bootloader-extra/files/isolinux.cfg
+++ b/recipes-core/bootloader-extra/files/isolinux.cfg
@@ -1,10 +1,14 @@
-# Set this option to zero if you wish to skip the boot prompt.
-PROMPT 1
+ui vesamenu.c32
 
-# This label will be started if you just push enter at the boot prompt, or if
-# you set the PROMPT option above to zero.
-DEFAULT @MENU_ENTRY@
+timeout 500
 
-LABEL @MENU_ENTRY@
-KERNEL /@KERNEL_IMAGETYPE@
-APPEND initrd=/initrd vga=785 @KERNEL_ARGS@
+menu title Liveusb Installer
+menu background amd.jpg
+
+promt 0
+
+label @MENU_ENTRY@
+	menu label Image Wic Install (emmc)
+	menu default
+	kernel /@KERNEL_IMAGETYPE@
+	append initrd=/initrd vga=785 @KERNEL_ARGS@
