implement liveusb installer scripts
Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-emmc.conf
+++ b/conf/machine/udoo-bolt-emmc.conf
@@ -3,7 +3,7 @@ require include/udoo-bolt-common.inc
 
 WKS_FILES ?= "emmc.wks"
 
-BOLT_ROOT_DEVICE ?= "/dev/mmcblk0p2"
+BOLT_ROOT_DEVICE ?= "${BOLT_BLOCK_DEVICE}p4"
 
 SERIAL_CONSOLES ?= "115200;ttyS0"
 
