--- a/recipes-core/bootloader-extra/files/grub.cfg
+++ b/recipes-core/bootloader-extra/files/grub.cfg
@@ -5,12 +5,17 @@ serial --unit=0 --speed=115200 --word=8 --parity=no --stop=1
 set gfxmode=auto
 set gfxpayload=keep
 
-default=0
+set default=0
 
-# Boot automatically after 0 secs.
-set timeout=0
+# Boot automatically after 50 secs.
+set timeout=50
 
-menuentry '@MENU_ENTRY@' {
-    linux /@KERNEL_IMAGETYPE@ LABEL=root @KERNEL_ARGS@
+menuentry 'shell' {
+    linux /@KERNEL_IMAGETYPE@ LABEL=root INSTALLER=0 @KERNEL_ARGS@
+    initrd /initrd
+}
+
+menuentry 'Wic Install EMMC (full)' {
+    linux /@KERNEL_IMAGETYPE@ LABEL=root INSTALLER=1 @KERNEL_ARGS@
     initrd /initrd
 }
