--- a/conf/machine/udoo-bolt-live-usb.conf
+++ b/conf/machine/udoo-bolt-live-usb.conf
@@ -9,4 +9,4 @@ BOLT_ROOT_DEVICE ?= "/dev/ram0"
 
 SERIAL_CONSOLES ?= "115200;ttyS0"
 
-KERNEL_ARGS ?= "root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
+KERNEL_ARGS ?= "BOLT_BLOCK_DEVICE=${BOLT_BLOCK_DEVICE} root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
