--- a/recipes-core/bootloader-extra/files/isolinux.cfg
+++ b/recipes-core/bootloader-extra/files/isolinux.cfg
@@ -1,5 +1,7 @@
 ui vesamenu.c32
 
+serial 0 115200
+
 timeout 500
 
 menu title Liveusb Installer
@@ -7,8 +9,13 @@ menu background amd.jpg
 
 promt 0
 
-label @MENU_ENTRY@
-	menu label Image Wic Install (emmc)
+label shell
+	menu label shell
 	menu default
 	kernel /@KERNEL_IMAGETYPE@
-	append initrd=/initrd vga=785 @KERNEL_ARGS@
+	append initrd=/initrd vga=785 INSTALLER=0 @KERNEL_ARGS@
+
+label installer
+	menu label Wic Install EMMC (full)
+	kernel /@KERNEL_IMAGETYPE@
+	append initrd=/initrd vga=785 INSTALLER=1 @KERNEL_ARGS@
