remove INSTALLER variables
Not required as there are two seperate initrd's.

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-live-usb.conf
+++ b/conf/machine/udoo-bolt-live-usb.conf
@@ -1,12 +1,10 @@
 require include/udoo-bolt-v1000.inc
 require include/udoo-bolt-common.inc
 
-LIVEUSB_INCLUDE_INSTALLER_SCRIPT ?= "1"
-
 WKS_FILES ?= "liveusb.wks"
 
 BOLT_ROOT_DEVICE ?= "/dev/ram0"
 
 SERIAL_CONSOLES ?= "115200;ttyS0"
 
-KERNEL_ARGS ?= "BOLT_BLOCK_DEVICE=${BOLT_BLOCK_DEVICE} root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
+KERNEL_ARGS ?= "BOLT_BLOCK_DEVICE=${BOLT_BLOCK_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
