--- a/recipes-core/bootloader-extra/files/isolinux.cfg
+++ b/recipes-core/bootloader-extra/files/isolinux.cfg
@@ -13,9 +13,9 @@ label shell
 	menu label shell
 	menu default
 	kernel /@KERNEL_IMAGETYPE@
-	append initrd=/initrd vga=785 INSTALLER=0 @KERNEL_ARGS@
+	append initrd=/initrd vga=785 @KERNEL_ARGS@
 
 label installer
 	menu label Wic Install EMMC (full)
 	kernel /@KERNEL_IMAGETYPE@
-	append initrd=/initrd vga=785 INSTALLER=1 @KERNEL_ARGS@
+	append initrd=/initrd-install vga=785 @KERNEL_ARGS@
