--- a/recipes-core/bootloader-extra/files/grub.cfg
+++ b/recipes-core/bootloader-extra/files/grub.cfg
@@ -11,11 +11,11 @@ set default=0
 set timeout=50
 
 menuentry 'shell' {
-    linux /@KERNEL_IMAGETYPE@ LABEL=root INSTALLER=0 @KERNEL_ARGS@
+    linux /@KERNEL_IMAGETYPE@ LABEL=root @KERNEL_ARGS@
     initrd /initrd
 }
 
 menuentry 'Wic Install EMMC (full)' {
-    linux /@KERNEL_IMAGETYPE@ LABEL=root INSTALLER=1 @KERNEL_ARGS@
-    initrd /initrd
+    linux /@KERNEL_IMAGETYPE@ LABEL=root @KERNEL_ARGS@
+    initrd /initrd-install
 }
