boot using PARTUUID of partition with LABEL rootfs
Commit also includes an extra variable in
udoo-bolt-live-usb.conf. So, when the emmc
grub config is built it uses that variable
to populate kernel arguments.

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/recipes-core/image-boot-files/files/grub.cfg
+++ b/recipes-core/image-boot-files/files/grub.cfg
@@ -3,9 +3,14 @@ set gfxmode=auto
 set gfxpayload=keep
 set default=0
 
-# Boot automatically after 0 secs.
-set timeout=0
+# Boot automatically after 500 secs.
+set timeout=500
 
+insmod search_label
+
+# Label set in emmc.wks
 menuentry 'UDOO Bolt eMMC' {
-    linux /@KERNEL_IMAGETYPE@ LABEL=root @KERNEL_ARGS@
+	search --no-floppy --set=root --label rootfs --hint hd0,gpt4
+	probe --set partuuid --part-uuid ($root)
+	linux /boot/@KERNEL_IMAGETYPE@ root=PARTUUID=$partuuid @KERNEL_ARGS@
 }
