image-boot-files: ensure grub menu can be seen in serial
Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/recipes-core/image-boot-files/files/grub.cfg
+++ b/recipes-core/image-boot-files/files/grub.cfg
@@ -1,4 +1,7 @@
 serial --unit=0 --speed=115200 --word=8 --parity=no --stop=1
+terminal_input serial console
+terminal_output serial console
+
 set gfxmode=auto
 set gfxpayload=keep
 set default=0
