--- a/recipes-core/bootloader-extra/files/grub.cfg
+++ b/recipes-core/bootloader-extra/files/grub.cfg
@@ -1,9 +1,6 @@
-# https://www.gnu.org/software/grub/manual/grub/html_node/index.html#SEC_Contents
-
 serial --unit=0 --speed=115200 --word=8 --parity=no --stop=1
-
-set gfxmode=auto
-set gfxpayload=keep
+terminal_input serial console
+terminal_output serial console
 
 set default=0
 
