udoo-bolt-emmc: remove root from kernel args
Root partition is search for by grub.

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/conf/machine/udoo-bolt-emmc.conf
+++ b/conf/machine/udoo-bolt-emmc.conf
@@ -3,8 +3,6 @@ require include/udoo-bolt-common.inc
 
 WKS_FILES ?= "emmc.wks"
 
-BOLT_ROOT_DEVICE ?= "${BOLT_BLOCK_DEVICE}p4"
-
 SERIAL_CONSOLES ?= "115200;ttyS0"
 
-KERNEL_ARGS ?= "root=${BOLT_ROOT_DEVICE} console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
+KERNEL_ARGS ?= "console=tty1 console=ttyS0,115200n8 rootfstype=ext4 ${@bb.utils.contains('ACPI_DEBUG', '1', '${ACPI_DEBUG_KERNEL_ARGS}', '', d)}"
