image-boot-files: add rootwait to kernel args
Problem:

Please append a correct "root=" boot option; here are the available partitions:
 0100            4096 ram0
 (driver?)
List of all bdev filesystems:
 ext3
 ext2
 ext4
 vfat

Signed-off-by: Vincent Davis Jr <vince@underview.tech>

--- a/recipes-core/image-boot-files/files/grub.cfg
+++ b/recipes-core/image-boot-files/files/grub.cfg
@@ -13,5 +13,5 @@ set timeout=500
 menuentry 'UDOO Bolt eMMC' {
 	search --no-floppy --set=root --label rootfs --hint hd0,gpt4
 	probe --set partuuid --part-uuid ($root)
-	linux /boot/@KERNEL_IMAGETYPE@ root=PARTUUID=$partuuid @KERNEL_ARGS@
+	linux /boot/@KERNEL_IMAGETYPE@ root=PARTUUID=$partuuid rootwait @KERNEL_ARGS@
 }
